--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,10 +1,12 @@
 use_frameworks!
 
-platform :ios, '9.0'
+platform :ios, '10.0'
 
 target 'Commons_Example' do
-  pod 'Commons', :path => '../'
-
+   pod 'Commons', :path => '../'
+   pod 'SwiftLint'
+  
+  
   target 'Commons_Tests' do
     inherit! :search_paths
 
