--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,7 +5,8 @@ platform :ios, '10.0'
 target 'Commons_Example' do
    pod 'Commons', :path => '../'
    pod 'SwiftLint'
-  
+   pod 'Alamofire', '~> 5.4.1'
+   pod 'AlamofireImage', '~> 4.1.0'
   
   target 'Commons_Tests' do
     inherit! :search_paths
